design reorg to solve white space issue

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,9 +1,12 @@
 .contact {
     width: 100%;
     height: 100vh;
-    background-color: #f3f3f2;
 }
 
 .contactContent {
     height: 100%;
+}
+
+h1 {
+    padding-top: 25px;
 }
