--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -7,13 +7,35 @@
 .main {
     width: 100%;
     height: 100vh;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    /* justify-content: center; */
+    position: relative;
+    /* align-items: center; */
 }
 
 video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: absolute;
 }
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .4);
+}
+
+/* video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+} */
 
 .textContent {
     position: absolute;
@@ -46,17 +68,22 @@ video {
     color: rgba(255, 255, 255);
 }
 
-.overlay {
+/* .overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .4);
-}
+} */
 
 .homepageName {
     font-size: 9rem;
+}
+
+.below-fold {
+    background-color: #f3f3f2;
+    padding-top: 100vh;
 }
 
 
