--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,7 +1,6 @@
 .portfolio {
     width: 100%;
     height: 100vh;
-    background-color: #f3f3f2;
 }
 
 .portfolioContent {
@@ -14,6 +13,10 @@
     left: 48%;
     bottom: 20px;
     cursor: pointer;
+}
+
+h1 {
+    padding-top: 25px;
 }
 
 /* tablet */
