--- a/src/Components/Work.css
+++ b/src/Components/Work.css
@@ -1,9 +1,12 @@
 .work {
     width: 100%;
     height: 100vh;
-    background-color: #f3f3f2;
 }
 
 .workContent {
     height: 100%;
+}
+
+h1 {
+    padding-top: 25px;
 }
